--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
+  <head>
+    Greeting page
+  </head>
   <body>
-    Hello there, awesome person! 
+    Whats good homie
   </body>
 </html>
