--- a/index.html
+++ b/index.html
@@ -2,7 +2,10 @@
   <head>
     <title>Greeting page</title>
   </head>
+  <h1>big ol header</h2>
   <body>
     Whats good homie
   </body>
+  <h2>smol header</h2>
 </html>
+
