--- a/index.html
+++ b/index.html
@@ -2,10 +2,14 @@
   <head>
     <title>Greeting page</title>
   </head>
+  <body>
   <h1>big ol header</h2>
+  </body>
   <body>
     Whats good homie
   </body>
+  <body>
   <h2>smol header</h2>
+  </body>
 </html>
 
