--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   </head>
   <body>
   <h1>big ol header</h1>
+  <img src="https://octodex.github.com/images/vinyltocat.png">
   </body>
  
 </html>
