--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
   <body>
   <h1>big ol header</h1>
   <img src="https://octodex.github.com/images/vinyltocat.png">
+  <ul>
+    <li>ramen</li>
+    <li>borger</li>
+  </ul>
   </body>
  
 </html>
