--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <h1>big ol header</h1>
   <img src="https://octodex.github.com/images/vinyltocat.png">
   <ul>
-    <li>ramen</li>
-    <li>borger</li>
+    <li><a href="ramen.com">This is a link to ramen</a></li>
+    <li><a href="burger.com">This is a link to burger!</a></li>
   </ul>
   </body>
  
