--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>Greeting page</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
   <h1>big ol header</h1>
